--- a/RockWeb/Styles/styles-v2/rock-components/_tree.scss
+++ b/RockWeb/Styles/styles-v2/rock-components/_tree.scss
@@ -75,6 +75,7 @@
   margin:         0;
   background:     var(--color-interface-softest);
   border-bottom:  1px solid var(--color-interface-soft);
+  height:         100%;
   //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
